--- a/index.html
+++ b/index.html
@@ -215,6 +215,103 @@
             </div>
         </div>
     </div>
+
+    <div class="f-row ">
+        <div class="f-col g-m">
+            <div class="f-col">
+                <h0>m</h0>
+                <h2>.m-[x]-[y]</h2>
+                <p><b>x/y</b> | xxxs, xxs, xs, s, m, l, xl, xxl, xxl</p>
+
+            </div>
+            <div class="f-col" style="background-color: aqua;">
+                <p class="m-s-s">
+                   Content | m-s-s
+                </p>
+                <p class="m-m-m">
+                    Content | m-m-m
+                 </p>
+                 <p class="m-l-l">
+                    Content | m-l-l
+                 </p>
+                 <p class="m-s-l">
+                    Content | m-s-l
+                 </p>
+                 <p class="m-l-s">
+                    Content | m-l-s
+                 </p>
+
+            </div>
+            <div class="f-row">
+                <div class="f-col grid-3">
+                    <p>Column 1 | f-col grid-3</p>
+                    <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                </div>
+                <div class="f-col grid-3">
+                    <p>Column 2 | f-col grid-3</p>
+                </div>
+                <div class="f-col grid-3">
+                    <p>Column 3 | f-col grid-3</p>
+                </div>
+            </div>
+            <div class="f-col">
+                <p>
+                   Row 1 | f-row
+                </p>
+            </div>
+            <div class="f-row grid-6">
+                <div class="f-col">
+                    <p>Column 1 | f-col grid-6</p>
+                    <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 2 | f-col grid-6</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 3 | f-col grid-6</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 4 | f-col grid-6</p>
+                    <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 5 | f-col grid-6</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 6 | f-col grid-6</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 7 | f-col grid-6</p>
+                    <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 8 | f-col grid-6</p>
+                </div>
+                <div class="f-col">
+                    <p>Column 9 | f-col grid-6</p>
+                </div>
+            </div>
+            <div class="f-col">
+                <p>
+                   Row 1 | f-row
+                </p>
+            </div>
+            <div class="f-row">
+                <div class="f-col-1">
+                    <p>Column 1 | f-col-1</p>
+                    
+                </div>
+                <div class="f-col-5">
+                    <p>Column 2 | f-col-5</p>
+                    <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                </div>
+                <div class="f-col-1">
+                    <p>Column 3 | f-col-1</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </div>
 </body>
 
